style: avoid selecting on Safari

--- a/src/ui/stylesheets/app.css
+++ b/src/ui/stylesheets/app.css
@@ -19,7 +19,9 @@ li {
 
 div#react-page {
   height: 100%;
+  cursor: default;
   user-select: none;
+  -webkit-user-select: none;
 }
 
 div#react-page:empty:before {
